// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Next Config Webpack Config should not add any presets if babelrc is used 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "loader": "babel-loader",
        "options": Object {
          "babelrc": true,
          "presets": Array [],
        },
        "test": /\\\\\\.js\\(\\\\\\?\\[\\^\\?\\]\\*\\)\\?\\$/,
      },
      Object {
        "loader": "emit-file-loader",
        "options": Object {
          "name": "dist/[path][name].[ext]",
        },
        "test": Array [
          /\\\\\\.\\(css\\|s\\(a\\|c\\)ss\\)\\$/,
          /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\)\\$/,
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": null,
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": null,
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": null,
              "minimize": true,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": null,
              "minimize": true,
              "sourceMap": false,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
          "name": "dist/static/[path][name]-[hash].[ext]",
          "publicPath": [Function],
        },
        "test": /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\|ttf\\|eot\\|woff2\\?\\|svg\\)\\$/,
      },
    ],
  },
  "plugins": Array [],
}
`;

exports[`Create Next Config Webpack Config should return customized config 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "loader": "babel-loader",
        "options": Object {
          "babelrc": false,
          "presets": Array [
            "../babel/preset",
          ],
        },
        "test": /\\\\\\.js\\(\\\\\\?\\[\\^\\?\\]\\*\\)\\?\\$/,
      },
      Object {
        "loader": "emit-file-loader",
        "options": Object {
          "name": "dist/[path][name].[ext]",
        },
        "test": Array [
          /\\\\\\.\\(css\\|s\\(a\\|c\\)ss\\)\\$/,
          /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\)\\$/,
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": null,
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": null,
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": null,
              "minimize": true,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": null,
              "minimize": true,
              "sourceMap": false,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
          "name": "dist/static/[path][name]-[hash].[ext]",
          "publicPath": [Function],
        },
        "test": /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\|ttf\\|eot\\|woff2\\?\\|svg\\)\\$/,
      },
    ],
  },
  "plugins": Array [
    [Function],
  ],
}
`;

exports[`Create Next Config Webpack Config should return default development config 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "loader": "babel-loader",
        "options": Object {
          "babelrc": false,
          "presets": Array [
            "../babel/preset",
          ],
        },
        "test": /\\\\\\.js\\(\\\\\\?\\[\\^\\?\\]\\*\\)\\?\\$/,
      },
      Object {
        "loader": "emit-file-loader",
        "options": Object {
          "name": "dist/[path][name].[ext]",
        },
        "test": Array [
          /\\\\\\.\\(css\\|s\\(a\\|c\\)ss\\)\\$/,
          /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\)\\$/,
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": "[name]__[local]--[hash:base64:5]",
              "minimize": false,
              "modules": true,
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[name]__[local]--[hash:base64:5]",
              "minimize": false,
              "modules": true,
              "sourceMap": true,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": "[name]__[local]--[hash:base64:5]",
              "minimize": false,
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": "[name]__[local]--[hash:base64:5]",
              "minimize": false,
              "sourceMap": true,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
          "name": "dist/static/[path][name].[ext]",
          "publicPath": [Function],
        },
        "test": /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\|ttf\\|eot\\|woff2\\?\\|svg\\)\\$/,
      },
    ],
  },
  "plugins": Array [],
}
`;

exports[`Create Next Config Webpack Config should return default production config 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "loader": "babel-loader",
        "options": Object {
          "babelrc": false,
          "presets": Array [
            "../babel/preset",
          ],
        },
        "test": /\\\\\\.js\\(\\\\\\?\\[\\^\\?\\]\\*\\)\\?\\$/,
      },
      Object {
        "loader": "emit-file-loader",
        "options": Object {
          "name": "dist/[path][name].[ext]",
        },
        "test": Array [
          /\\\\\\.\\(css\\|s\\(a\\|c\\)ss\\)\\$/,
          /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\)\\$/,
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": null,
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": null,
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.css\\$/,
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": null,
              "minimize": true,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "exclude": /\\\\\\.mod\\(ule\\)\\?\\\\\\.s\\(a\\|c\\)ss\\$/,
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "use": Array [
          "babel-loader",
          "styled-modules/loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 1,
              "localIdentName": null,
              "minimize": true,
              "sourceMap": false,
            },
          },
          "sass-loader",
        ],
      },
      Object {
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
          "name": "dist/static/[path][name]-[hash].[ext]",
          "publicPath": [Function],
        },
        "test": /\\\\\\.\\(bmp\\|gif\\|jpe\\?g\\|png\\|ttf\\|eot\\|woff2\\?\\|svg\\)\\$/,
      },
    ],
  },
  "plugins": Array [],
}
`;

exports[`Create Next Config should return default config 1`] = `
Object {
  "assetPrefix": "",
  "webpack": [Function],
}
`;
